syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";


option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string session_id = 1;
  string access_token = 2;
  google.protobuf.Timestamp access_token_expiration = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp refresh_token_expiration = 5;
  User user = 6;
}

